--- a/style.css
+++ b/style.css
@@ -10,13 +10,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 75vh;
   background: #190d709a;
 }
 .container {
-  width: 450px;
+  width: 500px;
   background: transparent;
   border-radius: 8px;
+  margin: 1rem;
 }
 .container h2 {
   font-weight: 600;
@@ -39,10 +40,36 @@ body {
   font-size: 2rem;
 }
 
+.history {
+  padding: 1.25rem 1.75rem;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
+  margin-block-start: 3rem;
+  min-height: fit-content;
+  background-color: transparent;
+  position: absolute;
+  width: 500px;
+  display: none;
+  margin-block-start: 16rem;
+}
+.history.show {
+  display: block;
+}
+
+.history ol {
+  color: black;
+  /* position: relative; */
+}
+.history li {
+  margin-bottom: 8px;
+}
+
 .wrapper {
   padding: 1.25rem 1.75rem;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
   margin-block-start: 3rem;
+}
+.controls.hide {
+  display: none;
 }
 .wrapper .input-box {
   position: relative;
@@ -59,16 +86,24 @@ body {
   border: 1px solid #aaa;
   padding: 0 2.85rem 0 1rem;
 }
-.input-box span {
+.input-box span,
+.history span {
   position: absolute;
   right: 13px;
   cursor: pointer;
   line-height: 53px;
   color: #707070;
 }
-.input-box span:hover {
+
+.history span {
+  top: 10px;
+  right: 40px;
+}
+
+:where(.input-box span,.history span:hover ):hover {
   color: #4285f4 !important;
 }
+
 .wrapper .pass-indicator {
   width: 100%;
   height: 4px;
@@ -107,9 +142,26 @@ body {
 }
 .pass-length input {
   width: 100%;
-
   height: 5px;
 }
+
+.scaleAnimation {
+  animation: copy 4s alternate-reverse;
+}
+
+@keyframes copy {
+  0% {
+    scale: 1;
+  }
+  50% {
+    scale: 1.25;
+    color: #425ff4;
+  }
+  100% {
+    scale: 1;
+  }
+}
+
 .pass-settings {
   color: #000;
 }
@@ -141,8 +193,13 @@ body {
   color: #4f4f4f;
   padding-left: 0.63rem;
 }
+
+.wrapper .btns {
+  display: flex;
+  justify-content: space-between;
+}
+
 .wrapper .generate-btn {
-  width: 100%;
   color: #fff;
   border: none;
   outline: none;
@@ -153,15 +210,29 @@ body {
   border-radius: 5px;
   text-transform: uppercase;
   margin: 0.94rem 0 1.3rem;
+  max-height: 56px;
+}
+
+.wrapper button:first-of-type {
+  width: 75%;
+}
+.wrapper button:last-of-type {
+  width: 20%;
+}
+
+.wrapper .generate-btn:hover {
+  opacity: 0.8;
 }
 
 .details input:first-of-type {
   width: 2.5rem;
   height: 26px;
+  padding-left: 3px;
 }
-input[type="number"], textarea {
-  background-color : #425ff4;
-  border: none; 
+input[type="number"],
+textarea {
+  background-color: #425ff4;
+  border: none;
   border-radius: 5px;
   font-size: 1rem;
 }
